# python-companyatlas

./: .gitignore  CONTRIBUTING.md  LICENSE  PROVIDERS.md  README.md  SETUP.md  dev.py  env.example  pyproject.toml  requirements-dev.txt
.cursor/rules/: assistant-guidelines.md
archives/providers/: README.md  base.py
archives/providers/europe/: __init__.py
archives/providers/europe/france/: bodacc.py  entdatagouv.py  inpi.py  insee.py  pharow.py  societecom.py
django-companyatlas/: pyproject.toml
docs/: AI.md  README.md  development.md  structure.md
src/companyatlas/: __init__.py  helpers.py
src/companyatlas/commands/: __init__.py  code.py  documents.py  events.py  search.py
src/companyatlas/providers/: __init__.py
src/companyatlas/providers/europe/: __init__.py
src/companyatlas/providers/europe/france/: __init__.py  entdatagouv.py  huwise.py  infogreffe.py  inpi.py  insee.py  opendatasoft.py  pappers.py  pharow.py  societecom.py
src/python_companyatlas/: __init__.py  cli.py  client.py
src/python_companyatlas/backends/: README.md  __init__.py  base.py  helpers.py
src/python_companyatlas/backends/europe/: __init__.py
src/python_companyatlas/backends/europe/france/: __init__.py  base.py  bodacc.py  cci.py  entdatagouv.py  espacedocs.py  infogreffe.py  inpi.py  insee.py  opendatasoft.py  pappers.py  pharow.py  societecom.py  societedata.py  societeinfo.py  verif.py
src/python_companyatlas/providers/: __init__.py
src/python_companyatlas/providers/europe/: __init__.py
src/python_companyatlas/providers/europe/france/: __init__.py  example_provider.py
tests/: __init__.py  test_client.py
