[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-companyatlas"
version = "0.1.0"
description = "Company information lookup and enrichment library."
authors = [{ name = "Charl", email = "charl@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    # flagpy is optional but recommended for flag image support
    # Falls back to emoji if not installed
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "flake8-simplify>=0.21",
    "flake8-docstrings>=1.7",
    "mypy>=1.0",
]
flags = [
    "flagpy>=1.0.0",  # For country flag image support (optional)
]
countries = [
    "pycountry>=23.0.0",  # For country code to name conversion (optional, replaces manual mapping)
]

[project.urls]
Homepage = "https://github.com/yourusername/python-companyatlas"

[project.scripts]
companyatlas = "python_companyatlas.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=python_companyatlas --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

